move hyphenation dict to own file

--- a/boldify/manifest.json
+++ b/boldify/manifest.json
@@ -8,7 +8,7 @@
       "matches": [
         "<all_urls>"
       ],
-      "js": ["boldify.js"]
+      "js": ["endict.js","boldify.js"]
     }
   ]
 }
